--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorItemText">#9E9E9E</color>
     <color name="line">#424141</color>
     <color name="grayText">#C0C0C0</color>
+    <color name="test">#323232</color>
 </resources>
