--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="line">#f0f0f0</color>
     <color name="grayText">#C0C0C0</color>
     <color name="alpha">#00000000</color>
+    <color name="test">#434343</color>
 
 
 </resources>
