--- a/app/src/main/res/layout/setting_widget.xml
+++ b/app/src/main/res/layout/setting_widget.xml
@@ -13,6 +13,15 @@
         android:orientation="vertical"
         android:padding="@dimen/padding_small">
 
+        <TextView
+            android:id="@+id/diyClick"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_small"
+            android:text="@string/clickEvent"
+            android:textColor="@drawable/other_text_click"
+            android:textSize="@dimen/setting_title_size" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
