--- a/app/src/main/res/layout/widget_1.xml
+++ b/app/src/main/res/layout/widget_1.xml
@@ -54,10 +54,11 @@
 
 
     <RelativeLayout
-        android:id="@+id/rightView"
+        android:id="@+id/rightView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:clickable="true"
         android:layout_toRightOf="@id/center"
         android:orientation="vertical">
 
