--- a/app/src/main/res/layout/widget_2.xml
+++ b/app/src/main/res/layout/widget_2.xml
@@ -111,7 +111,7 @@
         android:id="@+id/appwidget2_tip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/rightView"
+        android:layout_below="@id/rightView2"
         android:ems="1"
         android:textColor="@color/colorPrimary"
         android:textSize="@dimen/item_smalltext_size"
@@ -122,7 +122,7 @@
         android:id="@+id/appwidget2_tip2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/rightView"
+        android:layout_below="@id/rightView2"
         android:layout_marginLeft="@dimen/lineHeight"
         android:ems="1"
         android:textColor="@color/colorPrimary"
