--- a/app/src/main/res/layout/setting_widget_click.xml
+++ b/app/src/main/res/layout/setting_widget_click.xml
@@ -63,10 +63,7 @@
 
         </LinearLayout>
 
-        <View
-            android:layout_width="@dimen/lineHeight"
-            android:layout_height="match_parent"
-            android:background="@color/line" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -77,20 +74,27 @@
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/widgetToolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"/>
 
-
-            </androidx.appcompat.widget.Toolbar>
-
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/app_info_list"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="match_parent">
 
-                android:padding="@dimen/padding_small"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/item_appinfo" />
+                <ProgressBar
+                    android:id="@+id/loadingApp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="center"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/app_info_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="@dimen/padding_small"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/item_appinfo" />
+
+            </FrameLayout>
 
         </LinearLayout>
 
