--- a/app/src/main/res/layout/item_appinfo.xml
+++ b/app/src/main/res/layout/item_appinfo.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="info"
-            type="com.weather.data.AppInfo" />
+            type="com.weather.data.model.AppInfo" />
 
         <variable
             name="onClick"
