--- a/app/src/main/res/layout/item_weather2.xml
+++ b/app/src/main/res/layout/item_weather2.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="data"
-            type="com.weather.data.Data" />
+            type="com.weather.data.model.weather.Data" />
 
         <variable
             name="onClick"
