--- a/app/src/main/res/layout/weather_info.xml
+++ b/app/src/main/res/layout/weather_info.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
                 name="data"
-                type="com.weather.data.Data"/>
+                type="com.weather.data.model.weather.Data"/>
     </data>
 
     <androidx.cardview.widget.CardView
