--- a/app/src/main/res/layout/setting_main.xml
+++ b/app/src/main/res/layout/setting_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:cardCornerRadius="@dimen/lineHeight">
+    app:cardCornerRadius="@dimen/cardRadius">
 
     <FrameLayout
         android:id="@+id/settingView"
@@ -149,9 +149,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_small"
                 android:orientation="vertical"
-                android:paddingLeft="@dimen/padding_small"
-                android:layout_marginBottom="@dimen/margin_small">
+                android:paddingLeft="@dimen/padding_small">
 
                 <TextView
                     android:id="@+id/widgetset"
