--- a/app/src/main/res/layout/setting_other.xml
+++ b/app/src/main/res/layout/setting_other.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:cardCornerRadius="@dimen/lineHeight">
+    app:cardCornerRadius="@dimen/cardRadius">
 
     <LinearLayout
         android:layout_width="match_parent"
