--- a/app/src/main/res/layout/setting_widget.xml
+++ b/app/src/main/res/layout/setting_widget.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:cardCornerRadius="@dimen/lineHeight">
+    app:cardCornerRadius="@dimen/cardRadius">
 
     <LinearLayout
         android:layout_width="match_parent"
