--- a/app/src/main/res/layout/setting_widget_click.xml
+++ b/app/src/main/res/layout/setting_widget_click.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:cardCornerRadius="@dimen/lineHeight">
+    app:cardCornerRadius="@dimen/cardRadius">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -64,7 +64,6 @@
         </LinearLayout>
 
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -74,7 +73,7 @@
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/widgetToolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -84,7 +83,7 @@
                     android:id="@+id/loadingApp"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:layout_gravity="center"/>
+                    android:layout_gravity="center" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/app_info_list"
